--- a/helloJSP/pom.xml
+++ b/helloJSP/pom.xml
@@ -21,7 +21,12 @@
 			<version>1.18.30</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
