--- a/helloJSP/src/main/webapp/WEB-INF/web.xml
+++ b/helloJSP/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,18 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
 	id="WebApp_ID" version="4.0">
+	
 	<display-name>helloJSP</display-name>
+	
+		<servlet>
+		<servlet-name>front</servlet-name>
+		<servlet-class>co.yedam.common.FrontController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>front</servlet-name>
+		<url-pattern>*.do</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
