--- a/helloJSP/src/main/webapp/WEB-INF/web.xml
+++ b/helloJSP/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	
 	<display-name>helloJSP</display-name>
 	
-		<servlet>
+	<servlet>
 		<servlet-name>front</servlet-name>
 		<servlet-class>co.yedam.common.FrontController</servlet-class>
 	</servlet>
@@ -16,6 +16,6 @@
 	</servlet-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
