--- a/helloJSP/pom.xml
+++ b/helloJSP/pom.xml
@@ -27,6 +27,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.10.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/servlets.com/cos -->
+		<dependency>
+			<groupId>servlets.com</groupId>
+			<artifactId>cos</artifactId>
+			<version>05Nov2002</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
