--- a/helloJSP/pom.xml
+++ b/helloJSP/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>cos</artifactId>
 			<version>05Nov2002</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.5.14</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
