--- a/helloJSP/pom.xml
+++ b/helloJSP/pom.xml
@@ -39,6 +39,17 @@
 			<artifactId>mybatis</artifactId>
 			<version>3.5.14</version>
 		</dependency>
+		<!-- https://https://downloads.apache.org/tomcat/taglibs/taglibs-standard-1.2.5/README_bin.txt -->
+		<dependency>
+			<groupId>org.apache.taglibs</groupId>
+			<artifactId>taglibs-standard-spec</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.taglibs</groupId>
+			<artifactId>taglibs-standard-impl</artifactId>
+			<version>1.2.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
